--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -9,58 +8,72 @@
   <link rel="icon" href="logo.png" />
 </head>
 <body>
-  <header>
+  <div class="header-container">
     <img src="logo.png" alt="Logo UCO" class="logo" />
-    <h1>Experiencia de Aprendizaje en Machine Learning</h1>
-    <p>Universidad Católica de Oriente</p>
-  </header>
+    <header>
+      <h1>Experiencia de Aprendizaje en Machine Learning</h1>
+      <p>Universidad Católica de Oriente | Docente: Daniel Betancur Trujillo</p>
+    </header>
+  </div>
 
-  <main>
-    <section class="tema">
-      <h2>1. Fundamentos de Machine Learning</h2>
-      <p>En esta sección aprenderás qué es el Machine Learning, sus fundamentos y cómo ha revolucionado el análisis de datos y la inteligencia artificial.</p>
-      <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/KytW151dpqU" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/oT3arRRB2Cw" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/Sb8XVheowVQ" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </section>
+  <div class="content-wrapper">
+    <nav class="sidebar">
+      <ul>
+        <li><a href="#fundamentos">1. Fundamentos</a></li>
+        <li><a href="#tipos">2. Tipos de Aprendizaje</a></li>
+        <li><a href="#modelos">3. Modelos en ML</a></li>
+        <li><a href="#tensorflow">4. TensorFlow</a></li>
+        <li><a href="#casos">5. Casos Prácticos</a></li>
+      </ul>
+    </nav>
 
-    <section class="tema">
-      <h2>2. Tipos de Aprendizaje</h2>
-      <p>Exploraremos los diferentes enfoques de aprendizaje automático, como el aprendizaje supervisado y no supervisado, y cómo aplicarlos.</p>
-      <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/3EhWXqRPaNs" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/0EXg3sCPj6I" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </section>
+    <main>
+      <section class="tema" id="fundamentos">
+        <h2>1. Fundamentos de Machine Learning</h2>
+        <p>El Machine Learning (Aprendizaje Automático) es una rama de la inteligencia artificial que permite a los sistemas aprender patrones a partir de datos sin ser programados explícitamente. En esta sección exploraremos los conceptos básicos que sustentan esta tecnología revolucionaria, incluyendo su historia, aplicaciones en el mundo real y los principios matemáticos fundamentales que hacen posible el aprendizaje automático.</p>
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/KytW151dpqU" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/3EhWXqRPaNs" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/NNue6rkDrws" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </section>
 
-    <section class="tema">
-      <h2>3. Modelos en Machine Learning</h2>
-      <p>Conoce qué es un modelo en ML y cómo se utilizan para predecir resultados a partir de datos. Veremos ejemplos básicos y su lógica detrás.</p>
-      <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/tGU1vzdjMfI" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/XNWKJsDNScw" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </section>
+      <section class="tema" id="tipos">
+        <h2>2. Tipos de Aprendizaje</h2>
+        <p>En Machine Learning existen diferentes paradigmas de aprendizaje según la naturaleza de los datos y los problemas a resolver. El aprendizaje supervisado utiliza datos etiquetados para entrenar modelos predictivos, mientras que el no supervisado descubre patrones ocultos en datos sin etiquetar. También exploraremos el aprendizaje por refuerzo, donde los agentes aprenden mediante interacción con su entorno. Cada enfoque tiene sus fortalezas y aplicaciones específicas en la industria.</p>
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/oT3arRRB2Cw" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/0EXg3sCPj6I" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </section>
 
-    <section class="tema">
-      <h2>4. Implementación en TensorFlow</h2>
-      <p>TensorFlow es una de las bibliotecas más potentes para crear modelos de aprendizaje automático. Aprende lo básico aquí.</p>
-      <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/NNue6rkDrws" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </section>
+      <section class="tema" id="modelos">
+        <h2>3. Modelos en Machine Learning</h2>
+        <p>Un modelo de Machine Learning es una representación matemática de un proceso de aprendizaje a partir de datos. En esta sección analizaremos diversos tipos de modelos, desde los más simples como regresión lineal hasta algoritmos complejos como redes neuronales. Comprenderemos cómo se entrenan estos modelos, cómo evalúan su rendimiento y cómo seleccionar el modelo adecuado para cada problema. También discutiremos conceptos clave como sobreajuste, sesgo-varianza y validación cruzada.</p>
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/tGU1vzdjMfI" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/XNWKJsDNScw" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </section>
 
-    <section class="tema">
-      <h2>5. Casos Prácticos: Clasificación y Regresión</h2>
-      <p>Aplicaciones reales de Machine Learning: clasificación de datos y regresión lineal. Aprende cómo estos modelos pueden ayudarte en problemas reales.</p>
-      <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/1EwRA_Slw1Q" frameborder="0" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/E0Hmnixke2g" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </section>
-  </main>
+      <section class="tema" id="tensorflow">
+        <h2>4. Implementación en TensorFlow</h2>
+        <p>TensorFlow es un framework de código abierto desarrollado por Google para la creación de modelos de Machine Learning y Deep Learning. En esta sección aprenderemos los fundamentos de TensorFlow, incluyendo su arquitectura de tensores, operaciones básicas y flujo de trabajo típico. Exploraremos cómo construir redes neuronales, configurar capas, definir funciones de pérdida y optimizadores. También veremos cómo visualizar el entrenamiento con TensorBoard y desplegar modelos en producción.</p>
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/Sb8XVheowVQ" frameborder="0" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/1EwRA_Slw1Q" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class="tema" id="casos">
+        <h2>5. Casos Prácticos: Clasificación y Regresión</h2>
+        <p>En esta sección aplicaremos los conceptos aprendidos a problemas reales. La clasificación nos permite predecir categorías (como detección de spam o diagnóstico médico), mientras que la regresión predice valores continuos (como precios de viviendas o demanda futura). Implementaremos pipelines completos de Machine Learning, desde la preparación de datos hasta la evaluación del modelo. También discutiremos técnicas avanzadas como feature engineering y optimización de hiperparámetros para mejorar el rendimiento de nuestros modelos.</p>
+        <div class="video-container">
+          <iframe src="https://www.youtube.com/embed/E0Hmnixke2g" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </section>
+    </main>
+  </div>
 
   <footer>
     <p>&copy; 2025 Universidad Católica de Oriente - Ingeniería de Sistemas</p>
